--- a/grid.css
+++ b/grid.css
@@ -8,73 +8,96 @@ html
     
 }
 
-/* Mobile Styles */
-@media only screen and (max-width: 400px) {
-    body {
-      background-color: #F09A9D; /* Red */
-    }
-  }
-  
-    /* h1  {
-        border: 3px solid red;
-        /* grid-row: 1; */
-        /* grid-column: col-start / span -1; */
-        /* margin: 0; */
-    /* }
-    
-    main {
-        border: 3px solid blue;
-    }
-    
-    section {
-        border: 3px solid green;
-    } */ 
-    
-     /* .item1 {
-        display: flex;
-        
-    } */
-    
-    /* .item2 {
-        grid-column: col-start 3 / span 6 ;
-        grid-row: 2;
-    } */
-    
-    /* footer {
-        border: 3px solid orangered;
-    }  */
+body {
+    font-family: 'Helvetica Neue',Arial,Helvetica,sans-serif;
+}
+
+.items{
+    /* padding: 1rem; */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    /* grid-gap: .5rem; */
+    align-items: center;
+  /* grid-auto-flow: column; */
+  /* grid-auto-columns: minmax(260px, 1fr); */
+
+}
+
+section {
+    width: 100%;
+    height: 400px;
+    display: grid;
+    justify-content: center;
+    border: 3px solid red;
+    align-items: center;
+    text-align: center;
+    /* flex-wrap: nowrap; */
+}
 
 
-/* Tablet Styles */
-@media only screen and (min-width: 401px) and (max-width: 960px) {
-    body {
-      background-color: #F5CF8E; /* Yellow */
-    }
-  }
-
-  /* Desktop Styles */
-@media only screen and (min-width: 961px) {
-    body {
-      background-color: #B2D6FF; /* Blue */
-    }
-  }
+nav {
+    background-color: goldenrod;
+    border: 3px solid red;
+    display: grid;
+    height: 80px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 
 
-/* body {
-    margin: 2rem auto;
-    width: 95%;
+}
+
+header {
+    background-color:rgb(237, 212, 164);
+    border: 3px solid red;
+    width: 100%;
+    height: 100px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+
+}
+
+/* .items {
+    display: grid;
+  grid-template-rows: auto;
+  grid-gap: .5rem;
+  margin: .5rem 0;
+
 } */
 
-/* .wrapper {
-    display: grid;
-    grid-gap: .5rem;
-    /* grid-template-rows: auto 1fr auto; */
-    /* grid-auto-rows: minmax(125px, auto); */
-    /* grid-template-columns: repeat(auto-fill,[col-start] 1fr); */
-/* } */ 
 
+.item1 {
+    background-color: #EAEDF0;
+    align-items: center;
+}
 
+/* .item3 {
+    background-color: #D6E9FE;
+} */
 
+.item4 {
+    background-color: papayawhip;
+    align-items: center;
+}
+
+.item6 {
+    background-color: lightsalmon;
+    align-items: center;
+    height: 20vh;
+}
+
+.item8 {
+    background-color: lightgrey;
+}
+
+.item9 {
+    background-color: lightseagreen;
+}
+
+.item10 {
+    background-color: bisque;
+}
 
 
 
